:construction: Jwt implementation in progress

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 HOST=0.0.0.0
 NODE_ENV=dev
 PORT=3333
+JWT_SECRET=secret
