--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"dev": "tsx watch src/server.ts",
 		"start": "node build/server.js",
 		"test": "vitest run",
+		"test:coverage": "vitest run --coverage",
+		"test:ui": "vitest --ui",
 		"test:watch": "vitest"
 	},
 	"keywords": [],
@@ -18,6 +20,8 @@
 		"@types/node": "20.1.0",
 		"@typescript-eslint/eslint-plugin": "5.59.2",
 		"@typescript-eslint/parser": "5.59.2",
+		"@vitest/coverage-c8": "0.31.2",
+		"@vitest/ui": "0.31.2",
 		"eslint": "8.40.0",
 		"prisma": "4.13.0",
 		"tsup": "6.7.0",
