--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
 	"scripts": {
 		"build": "tsup src --out-dir build",
 		"dev": "tsx watch src/server.ts",
+		"pretest:e2e": "cd prisma/vitest-environment-prisma && npm link",
 		"start": "node build/server.js",
 		"test": "vitest run",
 		"test:coverage": "vitest run --coverage",
+		"test:e2e": "vitest run --dir src/http",
 		"test:ui": "vitest --ui",
 		"test:watch": "vitest"
 	},
@@ -18,12 +20,15 @@
 	"devDependencies": {
 		"@types/bcryptjs": "2.4.2",
 		"@types/node": "20.1.0",
+		"@types/supertest": "2.0.12",
 		"@typescript-eslint/eslint-plugin": "5.59.2",
 		"@typescript-eslint/parser": "5.59.2",
 		"@vitest/coverage-c8": "0.31.2",
 		"@vitest/ui": "0.31.2",
 		"eslint": "8.40.0",
+		"npm-run-all": "4.1.5",
 		"prisma": "4.13.0",
+		"supertest": "6.3.3",
 		"tsup": "6.7.0",
 		"tsx": "3.12.7",
 		"typescript": "5.0.4",
