:white_check_mark: Add user tests and goal tests

--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
 	"scripts": {
 		"build": "tsup src --out-dir build",
 		"dev": "tsx watch src/server.ts",
-		"pretest:e2e": "cd prisma/vitest-environment-prisma && npm link",
+		"pretest:e2e": "run-s test::create-prisma-environment test:install-prisma-environment",
 		"start": "node build/server.js",
-		"test": "vitest run",
+		"test": "vitest run --dir src/use-cases",
 		"test:coverage": "vitest run --coverage",
+		"test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+		"test:install-prisma-environment": "npm link vitest-environment-prisma",
 		"test:e2e": "vitest run --dir src/http",
+		"test:e2e:watch": "vitest --dir src/http",
 		"test:ui": "vitest --ui",
-		"test:watch": "vitest"
+		"test:watch": "vitest --dir src/use-cases"
 	},
 	"keywords": [],
 	"author": "",
